resources/ej2-base/releasenotes/UWP/Release-Notes/v18.1.0.52/DocIO.md
## DocIO

### Bug Fixes
{:#DocIO-bug-fixes}

* \#250042 - Paragraph style is now preserved properly while open and save the DOCX format Word document.
* \#267826 - Picture Watermark is now preserved properly while clone and merge the DOC format Word document.
* \#269662 - The **NullReferenceException** will no longer be thrown while closing the Word document.
* \#270030 - Bookmark is now preserved properly inside the Text content Control while open and save the DOCX format Word document.
* \#272560, \#266791 - List numbers are now preserved properly while open and save the DOCX format Word document.
* \#271175 - List type is now set properly while parsing the HTML file.
* \#271988 - The **NullReferenceException** will no longer be thrown while opening a DOCX format Word document.
* \#F152998 - BeforeClearGroupFieldEventArgs now returns the proper merge field names while performing Mail merge in a Word document.
* \#271634 - The **NullReferenceException** will no longer be thrown while saving a DOCX format Word document.
* \#271695, \#272438, \#272430 - The **NullReferenceException** will no longer be thrown while performing Mail merge in a Word document.
* \#273310 - Left indent is now preserved properly while converting an HTML file to Word document.
* Table cell background color is now preserved properly while converting an HTML file to Word document.
